fix align icon

--- a/styles/home.css
+++ b/styles/home.css
@@ -22,6 +22,7 @@
 
 #page-home header a {
     display: flex;
+    align-items: center;
     color: var(--title-color);
     font-weight: 700;
 }
